test_regress/t/t_disable_iff_multi_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2022 by Antmicro Ltd.
// SPDX-License-Identifier: CC0-1.0

module t(/*AUTOARG*/
   // Inputs
   rstn
   );
   input rstn;

   default disable iff (!rstn);
   default disable iff (!rstn);

endmodule
